--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
-      content="gestores jya, gestoria jya, gestores, gestoria, abogados, abogacia, asesoramiento, la plata, abogados en la plata, abogados de la plata, gestor en la plata, gestores en la plata, asesoramiento juridico, aseoramiento juridico laboral, abogado laboral, asesoramiento juridico familiar, abogado familiar, abogado de familia, servicios de abogacia, servicios de gestoria, registrar propiedad inmueble, registro propiedad inmueble, informe de dominio de propiedad inmueble, copia de asiento registral de propiedad inmueble, titularidad de propiedad inmueble, partidas de nacimiento, partida de nacimiento, partidas de matrimonio, partida de matrimonio, partidas de defuncion, partida de defuncion, divorcio, abogado de divorcio, divorcio bilateral, divorcio unilateral, divorcios bilaterales, divorcios unilaterales, informe de dominio de automotor, registro de antecedentes, certificado de reincidencia, registro de reincidencia, arba, catastro, certificado catastral, cedula catastral, valuacion fiscal, accidentes laborales, abogado para accidentes laborales, accidentes de trabajo, abogado para accidentes de trabajo, abogado para art, sucesion, sucesiones "
+      content="gestores jya, gestoria jya, gestores, gestoria, abogados, abogacia, asesoramiento, la plata, abogados en la plata, abogados de la plata, gestor en la plata, gestores en la plata, asesoramiento juridico, aseoramiento juridico laboral, abogado laboral, asesoramiento juridico familiar, abogado familiar, abogado de familia, servicios de abogacia, servicios de gestoria, registrar propiedad inmueble, registro propiedad inmueble, informe de dominio de propiedad inmueble, copia de asiento registral de propiedad inmueble, titularidad de propiedad inmueble, catastro, certificado catastral, cedula catastral, valuacion fiscal, accidentes laborales, abogado para accidentes laborales, accidentes de trabajo, abogado para accidentes de trabajo, abogado para art, sucesion, sucesiones "
     />
     <title>Injumar Gestión, S.L.U.</title>
     <link rel="stylesheet" href="reset.css" />
@@ -39,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand fs-1" href="#">Injumar Gestión, S.L.U.</a>
+        <img src="logo.png" alt="Injumar Logo" />
         <button
           class="navbar-toggler"
           type="button"
@@ -81,7 +81,7 @@
     <section class="seccion-inicio" id="inicio">
       <div class="obfuscate-section">
         <div class="div-inicio-1">
-          <h1>Injumar Gestión, S.L.U.</h1>
+          <h1>INJUMAR GESTIÓN</h1>
           <div class="par-class">
             <ul id="desplazamiento">
               <li>
@@ -186,10 +186,6 @@
           mediante el ahorro o la inversión que mejor se adapten a lo que
           necesitan. Planes especiales de Protección Integral para autónomos.
         </p>
-        <!-- <p><i class="fa-solid fa-arrow-right fa-beat"></i> Automóvil</p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p> -->
       </div>
       <div>
         <span
@@ -205,8 +201,9 @@
         <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Liquidación,
           elaboración y presentación de Impuestos de Sucesiones, Donaciones,
-          Transmisiones Patrimoniales, Actos Jurídicos Documentados,
-          Plus-Valías...
+          Transmisiones Patrimoniales,
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Actos
+          Jurídicos Documentados, Plus-Valías...
         </p>
         <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Asistencia a la firma
@@ -267,25 +264,12 @@
           ...
         </h2>
         <p>
-          <!-- <i class="fa-solid fa-arrow-right fa-beat"></i> Informe de dominio -->
           Acompañamos al cliente en todo el proceso de la venta de su inmueble,
           desde posicionar el anuncio en las webs de mayor referencia, hasta
           gestionar las visitas, negociar el mejor acuerdo para el vendedor,
           elaboración del contrato de arras, hasta terminar con la firma ante
           Notario.
         </p>
-        <!-- <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Copia de asiento
-          registral
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Informe de anotaciones
-          personales (inhibicion y cesion)
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Indice de titulares
-        </p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Estudio de titulo</p> -->
       </div>
 
       <div>
@@ -310,7 +294,10 @@
       </p>
 
       <div class="col-md-8">
-        <form action="https://formsubmit.co/mseizduque@gmail.com" method="POST">
+        <form
+          action="https://formsubmit.co/jl.seiz@agentes.catalanaoccidente.com"
+          method="POST"
+        >
           <input
             type="text"
             name="name"
@@ -341,12 +328,7 @@
           <div class="col-md-8">
             <button type="submit" class="btn btn-secondary">Enviar</button>
           </div>
-          <!-- OJO A ESTE LINK -->
-          <!-- <input
-            type="hidden"
-            name="_next"
-            value="https://www.gestoriajya.com.ar/?formSend=success#contactos"
-          /> -->
+
           <input type="hidden" name="_captcha" value="false" />
         </form>
       </div>
@@ -361,7 +343,7 @@
             style="color: whitesmoke"
           ></i
         ></span>
-        <h2 class="text-white fs-5">mseizduque@gmail.com</h2>
+        <h2 class="text-white fs-5">jl.seiz@agentes.catalanaoccidente.com</h2>
       </div>
       <div class="contain mt-2">
         <span
