--- a/decesos.html
+++ b/decesos.html
@@ -31,9 +31,37 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      /* Estilos para el logo */
+      .logoInjumar img {
+        width: 15%;
+      }
+      .logoInjumar {
+        display: flex;
+        margin-top: 30px;
+        margin-bottom: -60px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      .backImg img {
+        position: absolute;
+        opacity: 0.50; 
+        width: 30%;
+        margin-top: 25%;
+        margin-left: 60%;
+        z-index: -1;
+      }
+    </style>
   </head>
 
   <body>
+    <div class="backImg">
+      <img src="/decesos.avif"></img>
+    </div>
+    <div class="logoInjumar">
+      <img src="logo.png" alt="Injumar Logo" />
+    </div>
     <div class="descripcion">
       <h1>DECESOS</h1>
       <p>
