--- a/seguros.html
+++ b/seguros.html
@@ -31,10 +31,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      /* Estilos para el logo */
+      .logoInjumar img {
+        width: 15%;
+      }
+      .logoInjumar {
+        display: flex;
+        margin-top: 30px;
+        margin-bottom: -60px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+    </style>
   </head>
 
   <body>
     <div class="container">
+      <div class="logoInjumar">
+        <img src="logo.png" alt="Injumar Logo" />
+      </div>
       <div class="descripcion">
         <h1>OCCIDENT SEGUROS</h1>
       </div>
