--- a/comercios.html
+++ b/comercios.html
@@ -52,6 +52,14 @@
         margin-left: 40%;
         z-index: -1;
       }
+        /* Estilos para dispositivos móviles (ancho de pantalla menor a 768px, ajusta el valor según tus necesidades) */
+@media (max-width: 768px) {
+  .backImg img {
+    width: 50%; 
+    margin-top: 200%; 
+    margin-left: 40%; 
+  }
+}
     </style>
   </head>
 
