--- a/index.html
+++ b/index.html
@@ -201,9 +201,8 @@
         <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Liquidación,
           elaboración y presentación de Impuestos de Sucesiones, Donaciones,
-          Transmisiones Patrimoniales,
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Actos
-          Jurídicos Documentados, Plus-Valías...
+          Transmisiones Patrimoniales, Actos Jurídicos Documentados,
+          Plus-Valías...
         </p>
         <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Asistencia a la firma
