--- a/responsabilidad-civil.html
+++ b/responsabilidad-civil.html
@@ -52,6 +52,14 @@
         margin-left: 55%;
         z-index: -1;
       }
+        /* Estilos para dispositivos móviles (ancho de pantalla menor a 768px, ajusta el valor según tus necesidades) */
+@media (max-width: 768px) {
+  .backImg img {
+    width: 50%; 
+    margin-top: 115%; 
+    margin-left: 25%; 
+  }
+}
     </style>
   </head>
 
