--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="script.js"></script>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <img src="logo.png" alt="Injumar Logo" />
         <button
           class="navbar-toggler"
+          id="menuButton"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -54,22 +56,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-2">
             <li class="nav-item">
-              <a class="nav-link fs-3 text-center text-white" href="#inicio"
+              <a class="nav-link fs-3 text-center text-black" href="#inicio"
                 >Inicio</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-3 text-center text-white" href="#Qsomos-m"
+              <a class="nav-link fs-3 text-center text-black" href="#Qsomos-m"
                 >Nosotros</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-3 text-center text-white" href="#Servicios"
+              <a class="nav-link fs-3 text-center text-black" href="#Servicios"
                 >Servicios</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-3 text-center text-white" href="#contactos"
+              <a class="nav-link fs-3 text-center text-black" href="#contactos"
                 >Contacto</a
               >
             </li>
